# real-time-number-plate

./: .gitignore  README.md  car_number_plate.py  get_number.py  pyproject.toml
