[tool.poetry]
name = "real-time-number-plate"
version = "0.1.0"
description = ""
authors = ["stephen0501 <tom9876555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
easyocr = "^1.7.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
